test/compile-fail/resolution/use/ambiguous-child/top.rhdl
mod a {
    pub mod b {
        pub mod c {}
    }
    pub mod b {
        pub mod c {}
    }
}

use a::b::c;
